--- a/Labb2-Linq/Views/Courses/Delete.cshtml
+++ b/Labb2-Linq/Views/Courses/Delete.cshtml
@@ -1,27 +1,27 @@
 ﻿@model Labb2_Linq.Models.Course
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Radera";
 }
 
-<h1>Delete</h1>
+<h1>Radera</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3 class="mt-5">Är du säker på att du vill ta bort?</h3>
 <div>
-    <h4>Course</h4>
     <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
+    <h4 class="mt-3">Kurs</h4>
+    <dl class="row mt-3">
+        <dt class = "col-sm-1">
             @Html.DisplayNameFor(model => model.CourseName)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-11">
             @Html.DisplayFor(model => model.CourseName)
         </dd>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="CourseId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <input type="submit" value="Radera" class="btn btn-danger" /> 
     </form>
     <div class="mt-md-5">
         <a class="text-decoration-none text-black-50" asp-action="Index">
