--- a/Labb2-Linq/Views/Students/Delete.cshtml
+++ b/Labb2-Linq/Views/Students/Delete.cshtml
@@ -1,33 +1,39 @@
 ﻿@model Labb2_Linq.Models.Student
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Radera";
 }
 
-<h1>Delete</h1>
+<h1>Radera</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3 class="mt-5">Är du säker på att du vill ta bort?</h3>
 <div>
-    <h4>Student</h4>
     <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
+    <h4 class="mt-3">Student</h4>
+    <dl class="row mt-3">
+        <dt class = "col-sm-1">
             @Html.DisplayNameFor(model => model.StudentFirstName)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-11">
             @Html.DisplayFor(model => model.StudentFirstName)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Class)
+        <dt class="col-sm-1">
+            @Html.DisplayNameFor(model => model.StudentLastName)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Class.ClassId)
+        <dd class="col-sm-11">
+            @Html.DisplayFor(model => model.StudentLastName)
+        </dd>
+        <dt class = "col-sm-1">
+            @Html.DisplayNameFor(model => model.Class.ClassName)
+        </dt>
+        <dd class = "col-sm-11">
+            @Html.DisplayFor(model => model.Class.ClassName)
         </dd>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="StudentId" />
-        <input type="submit" value="Delete" class="btn btn-danger" />
+        <input type="submit" value="Radera" class="btn btn-danger" />
     </form>
     <div class="mt-md-5">
         <a class="text-decoration-none text-black-50" asp-action="Index">
