--- a/Labb2-Linq/Views/Teachers/Delete.cshtml
+++ b/Labb2-Linq/Views/Teachers/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Labb2_Linq.Models.Teacher
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Radera";
 }
 
 <h1>Radera</h1>
@@ -11,16 +11,16 @@
     <hr />
     <h4 class="mt-3">Lärare</h4>
     <dl class="row mt-3">
-        <dt class = "col-2">
+        <dt class = "col-1">
             @Html.DisplayNameFor(model => model.TeacherFirstName)
         </dt>
-        <dd class = "col-10">
+        <dd class = "col-11">
             @Html.DisplayFor(model => model.TeacherFirstName)
         </dd>
-        <dt class="col-2">
+        <dt class="col-1">
             @Html.DisplayNameFor(model => model.TeacherLastName)
         </dt>
-        <dd class="col-10">
+        <dd class="col-11">
             @Html.DisplayFor(model => model.TeacherLastName)
         </dd>
     </dl>
