--- a/Labb2-Linq/Views/TeacherCourses/Edit.cshtml
+++ b/Labb2-Linq/Views/TeacherCourses/Edit.cshtml
@@ -1,33 +1,32 @@
-﻿@model Labb2_Linq.Models.TeacherCourse
-
+﻿@model Labb2_Linq.Models.SelectNewTeacherCourseVM
 @{
     ViewData["Title"] = "Redigera Lärarkurs";
 }
 
-<h1 class="mb-4">Redigera Lärarkurs</h1>
+<h1 class="mb-4">Redigera lärare för kurs</h1>
 
 <div class="row justify-content-start">
     <div class="col-md-6">
-        <h4>Lärarkursinformation</h4>
+        <h4>Nuvarande information</h4>
         <hr />
         <h6>Lärare: </h6><h6 class="text-black-50">@Html.DisplayFor(model => model.Teacher.TeacherFirstName) @Html.DisplayFor(model => model.Teacher.TeacherLastName)</h6>
         <h6>Kurs: </h6><h6 class="text-black-50">@Html.DisplayFor(model => model.Course.CourseName)</h6>
         <h4 class="mt-5">Uppdatera information</h4>
         <hr />
         <form asp-action="Edit" class="mt-4">
+
             <div asp-validation-summary="ModelOnly" class="alert alert-danger"></div>
-            <input type="hidden" asp-for="TeacherId" />
-            <input type="hidden" asp-for="CourseId" />
+            <input type="hidden" name="teacherId" value="@Model.TeacherId" />
 
             <div class="mb-3">
-                <label asp-for="TeacherId" class="form-label">Lärare</label>
-                <select asp-for="TeacherId" class="form-control" asp-items="ViewBag.TeacherId"></select>
-                <span asp-validation-for="TeacherId" class="text-danger"></span>
+                <label asp-for="NewTeacherId" class="form-label">Lärare</label>
+                <select asp-for="NewTeacherId" class="form-control" asp-items="ViewBag.TeacherId"></select>
+                <span asp-validation-for="NewTeacherId" class="text-danger"></span>
             </div>
 
             <div class="mb-3">
-                <label asp-for="CourseId" class="form-label">Kurs</label>
-                <select asp-for="CourseId" class="form-control" asp-items="ViewBag.CourseId"></select>
+                <label asp-for="CourseId" class="form-label" >Kurs</label>
+                <select asp-for="CourseId" class="form-control" asp-items="ViewBag.CourseId" disabled></select>
                 <span asp-validation-for="CourseId" class="text-danger"></span>
             </div>
 
